Fix main item alignment

--- a/src/app.scss
+++ b/src/app.scss
@@ -162,7 +162,6 @@ $mobile-width: 576px;
   /* Main */
   main {
       display: flex;
-      align-items: center;
       justify-content: center;
 
       @include mq('900px') {
@@ -345,9 +344,6 @@ header {
   ============================================ */
   .content {
     display: grid;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
     grid-template-columns: 1fr auto;
     max-width: 922px;
     margin: auto;
